--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# *** Config version 1.6.0 ***
+# *** Config version 1.6.1 ***
 ### Important values are marked with !  ###
 ### ! This file MUST BE UTF-8 encoded ! ###
 ### ! Restart the App after modifying ! ###
@@ -81,7 +81,6 @@ CSRF_COOKIE_SECURE = False
 ### Flask-Caching params
 ## See: https://flask-caching.readthedocs.io/en/latest/
 
-#CACHE_IGNORE_ERRORS = True
 #CACHING = {"CACHE_TYPE": "null"}
 
 CACHING = {"CACHE_TYPE": "FileSystemCache", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THRESHOLD": 500}
@@ -115,9 +114,12 @@ CHAR_NORM_FILE = norm_chars_table.tsv.txt
 ### MTW Worker API settings
 [worker]
 API_STATUS = private
+#API_STATUS = public
 API_TIMEOUT = 10
-API_TOKEN_MAX_AGE = 5
+API_TOKEN_MAX_AGE = 10
 
+API_AUTH_BASIC_USER = test
+API_AUTH_BASIC_PWD = test 
 
 [sparqlconf]
 
