--- a/flask-app/instance/conf/mtw-dist.ini
+++ b/flask-app/instance/conf/mtw-dist.ini
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# *** Config version 1.6.0 ***
+# *** Config version 1.6.1 ***
 ### Important values are marked with !  ###
 ### ! This file MUST BE UTF-8 encoded ! ###
 ### ! Restart the App after modifying ! ###
@@ -105,8 +105,10 @@ CHAR_NORM_FILE = norm_chars_table.tsv.txt
 [worker]
 API_STATUS = private
 API_TIMEOUT = 10
-API_TOKEN_MAX_AGE = 5
+API_TOKEN_MAX_AGE = 10
 
+API_AUTH_BASIC_USER = test
+API_AUTH_BASIC_PWD = test 
 
 [sparqlconf]
 
