--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -13,10 +13,6 @@
 ##  - You can override it with --fqdn param
 #SERVER_NAME = 127.0.0.1
 
-### ! Background Worker host:port ! ###
-## Default - production: http://127.0.0.1:55933/ - development: http://127.0.0.1:5903/ ##
-WORKER_HOST = http://127.0.0.1:5903/
-
 ### ! Always set ! ###
 TARGET_YEAR = 2024
 
@@ -111,15 +107,18 @@ GCSP = {"script-src":  "'self' ",
 
 CHAR_NORM_FILE = norm_chars_table.tsv.txt
 
-### MTW Worker API settings
+### MTW Worker API settings - required !
 [worker]
+
+WORKER_HOST = http://127.0.0.1:5903/
+
 API_STATUS = private
 #API_STATUS = public
 API_TIMEOUT = 10
 API_TOKEN_MAX_AGE = 10
 
-API_AUTH_BASIC_USER = test
-API_AUTH_BASIC_PWD = test 
+#API_AUTH_BASIC_USER = test
+#API_AUTH_BASIC_PWD = test 
 
 [sparqlconf]
 
