--- a/flask-app/instance/conf/mtw-dist.ini
+++ b/flask-app/instance/conf/mtw-dist.ini
@@ -18,8 +18,6 @@ SERVER_NAME = 127.0.0.1
 ##  into Apache htdocs root or the equivalent 
 ##  and rename it to: assets-mtw
 
-WORKER_HOST = http://127.0.0.1:55933/
-
 ### ! Always set ! ###
 TARGET_YEAR = 2024
 
@@ -101,14 +99,17 @@ GCSP = {"script-src":  "'self' ",
 
 CHAR_NORM_FILE = norm_chars_table.tsv.txt         
 
-### MTW Worker API settings
+### MTW Worker API settings - required !
 [worker]
+
+WORKER_HOST = http://127.0.0.1:55933/
+
 API_STATUS = private
 API_TIMEOUT = 10
 API_TOKEN_MAX_AGE = 10
 
-API_AUTH_BASIC_USER = test
-API_AUTH_BASIC_PWD = test 
+#API_AUTH_BASIC_USER = test
+#API_AUTH_BASIC_PWD = test 
 
 [sparqlconf]
 
