--- a/flask-app/instance/conf/mtw-dist.ini
+++ b/flask-app/instance/conf/mtw-dist.ini
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# *** Config version 1.6.1 ***
+# *** Config version 1.6.5 ***
 ### Important values are marked with !  ###
 ### ! This file MUST BE UTF-8 encoded ! ###
 ### ! Restart the App after modifying ! ###
@@ -65,6 +65,8 @@ MARC_TREE = daw
 ##  Default: /mtw/search/ui:
 AUT_LINK = https://www.medvik.cz/link/
 
+MESH_BROWSER = https://meshb.nlm.nih.gov/record/ui?ui=
+
 ### Data directories ###
 ## Defaults: relative to app directory: .../flask-app/instance/_data/... ##
 #SRC_DIR = D:/Data/mesh/in
@@ -90,7 +92,7 @@ SESSIONS = {
             }
 
 ## "SESSION_PERMANENT": true,
-## "PERMANENT_SESSION_LIFETIME": 1s * 60 * 10 = 600 - 10 min
+## "PERMANENT_SESSION_LIFETIME": 1s * 60 * 60 = 3600 - 60 min
 
 GCSP = {"script-src":  "'self' ",
         "connect-src": "'self' *.medvik.cz *.nlk.cz",
