--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# *** Config version 1.6.1 ***
+# *** Config version 1.6.5 ***
 ### Important values are marked with !  ###
 ### ! This file MUST BE UTF-8 encoded ! ###
 ### ! Restart the App after modifying ! ###
@@ -11,7 +11,7 @@
 
 ### Fully qualified domain name - use in production only
 ##  - You can override it with --fqdn param
-#SERVER_NAME = 127.0.0.1
+#SERVER_NAME = 127.0.0.1:5900
 
 ### ! Always set ! ###
 TARGET_YEAR = 2024
@@ -57,6 +57,8 @@ MARC_TREE = daw
 ##  Default: /mtw/search/ui:
 AUT_LINK = https://www.medvik.cz/link/
 
+MESH_BROWSER = https://meshb.nlm.nih.gov/record/ui?ui=
+
 ### Data directories ###
 ## Defaults: relative to app directory: .../flask-app/instance/_data/... ##
 #SRC_DIR = D:/Data/mesh/in
@@ -88,13 +90,9 @@ SESSIONS = {
             "SESSION_COOKIE_NAME": "mtwdevsession", "SESSION_KEY_PREFIX": "MTWSDEV",
             "SESSION_COOKIE_SAMESITE": "Lax",
             "SESSION_COOKIE_SECURE": false,
-            "SESSION_PERMANENT": false,
-            "SESSION_COOKIE_SECURE": false,
-            "SESSION_REVERSE_PROXY": false,
-            "SESSION_USE_SIGNER": false
+            "SESSION_REVERSE_PROXY": false
             }
 
-## "SESSION_PERMANENT": true,
 ## "PERMANENT_SESSION_LIFETIME": 1s * 60 * 10 = 600 - 10 min
 
 GCSP = {"script-src":  "'self' ",
