--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -81,19 +81,16 @@ CSRF_COOKIE_SECURE = False
 
 #CACHING = {"CACHE_TYPE": "null"}
 
-CACHING = {"CACHE_TYPE": "FileSystemCache", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THRESHOLD": 500}
+CACHING = {"CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THRESHOLD": 500}
 
 ### Flask-Session params
 ## See: https://flasksession.readthedocs.io/en/latest/
 
 SESSIONS = {
             "SESSION_COOKIE_NAME": "mtwdevsession", "SESSION_KEY_PREFIX": "MTWSDEV",
-            "SESSION_COOKIE_SAMESITE": "Lax",
             "SESSION_COOKIE_SECURE": false,
             "SESSION_REVERSE_PROXY": false
             }
-
-## "PERMANENT_SESSION_LIFETIME": 1s * 60 * 10 = 600 - 10 min
 
 GCSP = {"script-src":  "'self' ",
         "connect-src": "'self' *.medvik.cz *.nlk.cz",
@@ -105,11 +102,12 @@ GCSP = {"script-src":  "'self' ",
 
 CHAR_NORM_FILE = norm_chars_table.tsv.txt
 
-### MTW Worker API settings - required !
-[worker]
 
+[worker]
+### MTW Worker API settings - required !
 WORKER_HOST = http://127.0.0.1:5903/
 
+API_SCOPE = mtw_api_worker
 API_STATUS = private
 #API_STATUS = public
 API_TIMEOUT = 10
