--- a/flask-app/instance/conf/mtw-dist.ini
+++ b/flask-app/instance/conf/mtw-dist.ini
@@ -81,18 +81,14 @@ MESH_BROWSER = https://meshb.nlm.nih.gov/record/ui?ui=
 ### Flask-Caching params
 ## See: https://flask-caching.readthedocs.io/en/latest/
 
-CACHING = {"CACHE_TYPE": "FileSystemCache", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THRESHOLD": 1000}
+CACHING = {"CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THRESHOLD": 1000}
 
 ### Flask-Session params
 ## See: https://flasksession.readthedocs.io/en/latest/
 
 SESSIONS = {
-            "SESSION_COOKIE_NAME": "mtwsession", "SESSION_KEY_PREFIX": "MTWS",
-            "SESSION_COOKIE_SAMESITE": "Lax"
+            "SESSION_COOKIE_NAME": "mtwsession", "SESSION_KEY_PREFIX": "MTWS"
             }
-
-## "SESSION_PERMANENT": true,
-## "PERMANENT_SESSION_LIFETIME": 1s * 60 * 60 = 3600 - 60 min
 
 GCSP = {"script-src":  "'self' ",
         "connect-src": "'self' *.medvik.cz *.nlk.cz",
@@ -104,11 +100,12 @@ GCSP = {"script-src":  "'self' ",
 
 CHAR_NORM_FILE = norm_chars_table.tsv.txt         
 
-### MTW Worker API settings - required !
-[worker]
 
+[worker]
+### MTW Worker API settings - required !
 WORKER_HOST = http://127.0.0.1:55933/
 
+API_SCOPE = mtw_api_worker
 API_STATUS = private
 API_TIMEOUT = 10
 API_TOKEN_MAX_AGE = 10
