--- a/flask-app/instance/conf/mtw-dist.ini
+++ b/flask-app/instance/conf/mtw-dist.ini
@@ -11,12 +11,12 @@
 
 ### ! Fully qualified domain name - required !
 ##  - You can override it with --fqdn param when running mtw-server
-#SERVER_NAME = test.medvik.cz
+SERVER_NAME = test.medvik.cz
 
-### You MUST copy the content of the static dir 
-###  into Apache htdocs root or the equivalent 
+### You MUST copy the content of the static dir
+###  into Apache htdocs root or the equivalent
 ###  and rename it to: assets-mtw
-##  Add to Apache config: 
+##  Add to Apache config:
 ##   RewriteEngine on
 ##   RewriteRule ^/<prefix>/assets-mtw/(.*) /assets-mtw/$1
 
@@ -97,7 +97,7 @@ GCSP = {"script-src":  "'self' ",
         "img-src":     "'self' *.medvik.cz *.nlk.cz data:"
         }
 
-CHAR_NORM_FILE = norm_chars_table.tsv.txt         
+CHAR_NORM_FILE = norm_chars_table.tsv.txt
 
 
 [worker]
