--- a/flask-app/instance/conf/mtw-dist.ini
+++ b/flask-app/instance/conf/mtw-dist.ini
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# *** Config version 1.6.5 ***
+# *** Config version 1.6.9 ***
 ### Important values are marked with !  ###
 ### ! This file MUST BE UTF-8 encoded ! ###
 ### ! Restart the App after modifying ! ###
@@ -99,6 +99,8 @@ GCSP = {"script-src":  "'self' ",
 
 CHAR_NORM_FILE = norm_chars_table.tsv.txt
 
+### Uncomment only if using Jena +5.0 - use text:propLists defined in mesh.ttl - default: False
+#USE_PROP_LISTS = True
 
 [worker]
 ### MTW Worker API settings - required !
@@ -110,7 +112,7 @@ API_TIMEOUT = 10
 API_TOKEN_MAX_AGE = 10
 
 #API_AUTH_BASIC_USER = test
-#API_AUTH_BASIC_PWD = test 
+#API_AUTH_BASIC_PWD = test
 
 [sparqlconf]
 
@@ -154,4 +156,3 @@ TRX_NOTES = annotation,considerAlso,historyNote
 DESC_NOTES = annotation,considerAlso,historyNote,onlineNote,publicMeSHNote,translatorsNote
 
 ROLES = manager,editor,contributor,viewer,disabled,locked
-
