--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -102,7 +102,7 @@ GCSP = {"script-src":  "'self' ",
 CHAR_NORM_FILE = norm_chars_table.tsv.txt
 
 ### Uncomment only if using Jena +5.0 - use text:propLists defined in mesh.ttl - default: False
-#USE_PROP_LISTS = True
+USE_PROP_LISTS = True
 
 [worker]
 ### MTW Worker API settings - required !
@@ -159,3 +159,4 @@ TRX_NOTES = annotation,considerAlso,historyNote
 DESC_NOTES = annotation,considerAlso,historyNote,onlineNote,publicMeSHNote,translatorsNote
 
 ROLES = manager,editor,contributor,viewer,disabled,locked
+
