Updates to config

--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -112,7 +112,7 @@ API_SCOPE = mtw_api_worker
 API_STATUS = private
 #API_STATUS = public
 API_TIMEOUT = 10
-API_TOKEN_MAX_AGE = 10
+API_TOKEN_MAX_AGE = 1800
 
 #API_AUTH_BASIC_USER = test
 #API_AUTH_BASIC_PWD = test
@@ -127,16 +127,16 @@ TARGET_LANG = cs
 ##  the custom URI prefix for you translation ##
 TARGET_NS = http://mesh.medvik.cz/link/
 
-### ! Source namespace ! ###
-## default:  http://id.nlm.nih.gov/mesh/ ##
-## If using a versioned MeSH source dataset You MUST specify a respective year, ie: mesh2019.nt.gz => SOURCE_NS = http://id.nlm.nih.gov/mesh/2019/ ##
-#SOURCE_NS = http://id.nlm.nih.gov/mesh/2019/
-
 ### Default values:
 #SPARQL_HOST = http://127.0.0.1:3030/
 #SPARQL_DATASET = mesh
 
 ### DO NOT EDIT BELOW THIS LINE ###
+
+### Source namespace ###
+## Default:  http://id.nlm.nih.gov/mesh/ ##
+## If using a versioned MeSH source dataset You MUST specify a respective year, ie: mesh2019.nt.gz => SOURCE_NS = http://id.nlm.nih.gov/mesh/2019/ ##
+#SOURCE_NS = http://id.nlm.nih.gov/mesh/2025/
 
 ### MeSH RDF SPARQL Endpoint
 #MESH_RDF = https://id.nlm.nih.gov/mesh/sparql
@@ -146,7 +146,7 @@ TARGET_NS = http://mesh.medvik.cz/link/
 ### Source namespace vocabulary ###
 #SOURCE_NS_VOCAB = http://id.nlm.nih.gov/mesh/vocab#
 
-### MeSH Translation vocabulary namespace - Please DO NOT CHANGE ###
+### MeSH Translation vocabulary namespace - DO NOT CHANGE ###
 #TRX_NS_VOCAB = http://www.medvik.cz/schema/mesh/vocab/#
 
 [flowconf]
@@ -159,4 +159,3 @@ TRX_NOTES = annotation,considerAlso,historyNote
 DESC_NOTES = annotation,considerAlso,historyNote,onlineNote,publicMeSHNote,translatorsNote
 
 ROLES = manager,editor,contributor,viewer,disabled,locked
-
