--- a/flask-app/instance/conf/mtw-dist.ini
+++ b/flask-app/instance/conf/mtw-dist.ini
@@ -78,12 +78,12 @@ MESH_BROWSER = https://meshb.nlm.nih.gov/record/ui?ui=
 #DATABASE_NAME = mtw.db
 
 ### Flask-Caching params
-## See: https://flask-caching.readthedocs.io/en/latest/
+## See: https://flask-caching.readthedocs.io/
 
 CACHING = {"CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THRESHOLD": 1000}
 
 ### Flask-Session params
-## See: https://flasksession.readthedocs.io/en/latest/
+## See: https://flask-session.readthedocs.io/
 
 SESSIONS = {
             "SESSION_COOKIE_NAME": "mtwsession", "SESSION_KEY_PREFIX": "MTWS"
