--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -77,13 +77,13 @@ DEV_DISABLE_CSRF = True
 CSRF_COOKIE_SECURE = False
 
 ### Flask-Caching params
-## See: https://flask-caching.readthedocs.io/en/latest/
+## See: https://flask-caching.readthedocs.io/
 
 CACHING = {"CACHE_TYPE": "null"}
 #CACHING = {"CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THRESHOLD": 500}
 
 ### Flask-Session params
-## See: https://flasksession.readthedocs.io/en/latest/
+## See: https://flask-session.readthedocs.io/
 
 SESSIONS = {
             "SESSION_COOKIE_NAME": "mtwdevsession", "SESSION_KEY_PREFIX": "MTWSDEV",
