--- a/flask-app/instance/conf/mtw-dist.ini
+++ b/flask-app/instance/conf/mtw-dist.ini
@@ -80,13 +80,15 @@ MESH_BROWSER = https://meshb.nlm.nih.gov/record/ui?ui=
 ### Flask-Caching params
 ## See: https://flask-caching.readthedocs.io/
 
-CACHING = {"CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THRESHOLD": 1000}
+CACHING = {"CACHE_DEFAULT_TIMEOUT": 300, "CACHE_THRESHOLD": 1000}
 
 ### Flask-Session params
 ## See: https://flask-session.readthedocs.io/
 
 SESSIONS = {
-            "SESSION_COOKIE_NAME": "mtwsession", "SESSION_KEY_PREFIX": "MTWS"
+            "SESSION_COOKIE_NAME": "mtwsession",
+            "SESSION_KEY_PREFIX": "MTWS",
+            "PERMANENT_SESSION_LIFETIME": 600
             }
 
 GCSP = {"script-src":  "'self' ",
