--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -80,7 +80,7 @@ CSRF_COOKIE_SECURE = False
 ## See: https://flask-caching.readthedocs.io/
 
 CACHING = {"CACHE_TYPE": "null"}
-#CACHING = {"CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THRESHOLD": 500}
+#CACHING = {"CACHE_DEFAULT_TIMEOUT": 300, "CACHE_THRESHOLD": 500}
 
 ### Flask-Session params
 ## See: https://flask-session.readthedocs.io/
@@ -88,7 +88,8 @@ CACHING = {"CACHE_TYPE": "null"}
 SESSIONS = {
             "SESSION_COOKIE_NAME": "mtwdevsession", "SESSION_KEY_PREFIX": "MTWSDEV",
             "SESSION_COOKIE_SECURE": false,
-            "SESSION_REVERSE_PROXY": false
+            "SESSION_REVERSE_PROXY": false,
+            "PERMANENT_SESSION_LIFETIME": 600
             }
 
 GCSP = {"script-src":  "'self' ",
