--- a/flask-app/instance/conf/mtw-dist.ini
+++ b/flask-app/instance/conf/mtw-dist.ini
@@ -88,8 +88,10 @@ CACHING = {"CACHE_DEFAULT_TIMEOUT": 300, "CACHE_THRESHOLD": 1000}
 SESSIONS = {
             "SESSION_COOKIE_NAME": "mtwsession",
             "SESSION_KEY_PREFIX": "MTWS",
-            "PERMANENT_SESSION_LIFETIME": 600
+            "PERMANENT_SESSION_LIFETIME": 1800
             }
+
+# PERMANENT_SESSION_LIFETIME in seconds - ie. 60 * 30 = 1800             
 
 GCSP = {"script-src":  "'self' ",
         "connect-src": "'self' *.medvik.cz *.nlk.cz",
