--- a/flask-app/instance/conf/mtw-dist.ini
+++ b/flask-app/instance/conf/mtw-dist.ini
@@ -91,7 +91,9 @@ SESSIONS = {
             "PERMANENT_SESSION_LIFETIME": 1800
             }
 
-# PERMANENT_SESSION_LIFETIME in seconds - ie. 60 * 30 = 1800             
+# PERMANENT_SESSION_LIFETIME in seconds 
+# - default 10 minutes: 600 
+# - 30 minutes: 600 * 3 = 1800         
 
 GCSP = {"script-src":  "'self' ",
         "connect-src": "'self' *.medvik.cz *.nlk.cz",
