MeSH version bump to 2026

--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -14,15 +14,15 @@
 #SERVER_NAME = 127.0.0.1:5900
 
 ### ! Always set ! ###
-TARGET_YEAR = 2025
+TARGET_YEAR = 2026
 
 ### Default previous version year - used for showing modifications ###
-PREV_YEAR_DEF = 2024
-PREV_YEARS = 2015,2016,2017,2018,2019,2020,2021,2022,2023,2024
+PREV_YEAR_DEF = 2025
+PREV_YEARS = 2015,2016,2017,2018,2019,2020,2021,2022,2023,2024,2025
 
 ### Date format:  YYYY-MM-DD ###
-REVISED_AFTER = 2023-01-01
-CREATED_AFTER = 2023-01-01
+REVISED_AFTER = 2024-01-01
+CREATED_AFTER = 2024-01-01
 
 ### ! Always set ! ###
 MARC_LIBCODE = CZ-PrNML
@@ -86,10 +86,15 @@ CACHING = {"CACHE_TYPE": "null"}
 ## See: https://flask-session.readthedocs.io/
 
 SESSIONS = {
-            "SESSION_COOKIE_NAME": "mtwdevsession", "SESSION_KEY_PREFIX": "MTWSDEV",
-            "SESSION_COOKIE_SECURE": false,
-            "PERMANENT_SESSION_LIFETIME": 600
+            "SESSION_COOKIE_NAME": "mtwdevsession", 
+            "SESSION_KEY_PREFIX": "MTWSDEV",
+            "PERMANENT_SESSION_LIFETIME": 1800,
+            "SESSION_COOKIE_SECURE": false
             }
+
+# PERMANENT_SESSION_LIFETIME in seconds
+# - default 10 minutes: 600
+# - 30 minutes: 600 * 3 = 1800
 
 GCSP = {"script-src":  "'self' ",
         "connect-src": "'self' *.medvik.cz *.nlk.cz",
