--- a/flask-app/instance/conf/mtw-dist.ini
+++ b/flask-app/instance/conf/mtw-dist.ini
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# *** Config version 1.7.0 ***
+# *** Config version 1.7.4 ***
 ### Important values are marked with !  ###
 ### ! This file MUST BE UTF-8 encoded ! ###
 ### ! Restart the App after modifying ! ###
@@ -85,15 +85,13 @@ CACHING = {"CACHE_DEFAULT_TIMEOUT": 300, "CACHE_THRESHOLD": 1000}
 ### Flask-Session params
 ## See: https://flask-session.readthedocs.io/
 
-SESSIONS = {
-            "SESSION_COOKIE_NAME": "mtwsession",
-            "SESSION_KEY_PREFIX": "MTWS",
-            "PERMANENT_SESSION_LIFETIME": 1800
-            }
+## In Production - always use SESSION_COOKIE_NAME with prefix: __Host-
+
+SESSIONS = {"SESSION_COOKIE_NAME": "__Host-mtws"}
 
 # PERMANENT_SESSION_LIFETIME in seconds
-# - default 10 minutes: 600
-# - 30 minutes: 600 * 3 = 1800
+# - default:
+# 60 minutes: 600 * 6  = 3600
 
 GCSP = {"script-src":  "'self' ",
         "connect-src": "'self' *.medvik.cz *.nlk.cz",
