--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# *** Config version 1.7.0 ***
+# *** Config version 1.7.4 ***
 ### Important values are marked with !  ###
 ### ! This file MUST BE UTF-8 encoded ! ###
 ### ! Restart the App after modifying ! ###
@@ -85,16 +85,12 @@ CACHING = {"CACHE_TYPE": "null"}
 ### Flask-Session params
 ## See: https://flask-session.readthedocs.io/
 
-SESSIONS = {
-            "SESSION_COOKIE_NAME": "mtwdevsession", 
-            "SESSION_KEY_PREFIX": "MTWSDEV",
-            "PERMANENT_SESSION_LIFETIME": 1800,
-            "SESSION_COOKIE_SECURE": false
-            }
+SESSIONS = {"SESSION_COOKIE_NAME": "mtwdevs",
+            "SESSION_COOKIE_SECURE": false }
 
 # PERMANENT_SESSION_LIFETIME in seconds
-# - default 10 minutes: 600
-# - 30 minutes: 600 * 3 = 1800
+# - default:
+# 60 minutes: 600 * 6  = 3600
 
 GCSP = {"script-src":  "'self' ",
         "connect-src": "'self' *.medvik.cz *.nlk.cz",
