--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -27,6 +27,7 @@ jobs:
           python-version: 3.11
       - name: Install dependencies
         run: |
+          cd flask-app
           python -m pip install --upgrade pip
           pip install -r mtw_requirements.txt
       - uses: github/codeql-action/init@v3
