--- a/flask-app/instance/conf/mtw-dist.ini
+++ b/flask-app/instance/conf/mtw-dist.ini
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# *** Config version 1.7.4 ***
+# *** Config version 1.7.5 ***
 ### Important values are marked with !  ###
 ### ! This file MUST BE UTF-8 encoded ! ###
 ### ! Restart the App after modifying ! ###
@@ -85,7 +85,7 @@ CACHING = {"CACHE_DEFAULT_TIMEOUT": 300, "CACHE_THRESHOLD": 1000}
 ### Flask-Session params
 ## See: https://flask-session.readthedocs.io/
 
-## In Production - always use SESSION_COOKIE_NAME with prefix: __Host-
+## In Production - always use SESSION_COOKIE_NAME with prefix: __Host-...
 
 SESSIONS = {"SESSION_COOKIE_NAME": "__Host-mtws"}
 
@@ -95,7 +95,7 @@ SESSIONS = {"SESSION_COOKIE_NAME": "__Host-mtws"}
 
 GCSP = {"script-src":  "'self' ",
         "connect-src": "'self' *.medvik.cz *.nlk.cz",
-        "style-src":   "'self' fonts.googleapis.com *.gstatic.com data: 'unsafe-inline'",
+        "style-src":   "'self' fonts.googleapis.com *.gstatic.com data: ",
         "frame-src":   "'self' ",
         "font-src":    "'self' *.gstatic.com",
         "img-src":     "'self' *.medvik.cz *.nlk.cz data:"
