--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# *** Config version 1.7.4 ***
+# *** Config version 1.7.5 ***
 ### Important values are marked with !  ###
 ### ! This file MUST BE UTF-8 encoded ! ###
 ### ! Restart the App after modifying ! ###
@@ -94,7 +94,7 @@ SESSIONS = {"SESSION_COOKIE_NAME": "mtwdevs",
 
 GCSP = {"script-src":  "'self' ",
         "connect-src": "'self' *.medvik.cz *.nlk.cz",
-        "style-src":   "'self' fonts.googleapis.com *.gstatic.com data: 'unsafe-inline'",
+        "style-src":   "'self' fonts.googleapis.com *.gstatic.com data: ",
         "frame-src":   "'self' ",
         "font-src":    "'self' *.gstatic.com",
         "img-src":     "'self' *.medvik.cz *.nlk.cz data:"
